--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ body{
     background-color: var(--white);
     color: black;
 }
+.my-bttn{
+    background-color: var(--aqua);
+    color: var(--white);
+}
 /* FOOTER */
 #t-footer{
     background-color: var(--light-blue);
